--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "sass": "^1.60.0",
     "stripe": "^10.8.0",
     "styled-components": "^5.3.5",
+    "tailwind-merge": "^2.4.0",
     "typescript": "^4.9.5",
     "valtio": "^1.10.6",
     "web-vitals": "^1.1.1",
