--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "exports": {
     "./Button": "./components/Button.tsx",
-    "./Input": "./components/Input.tsx"
+    "./Input": "./components/Input.tsx",
+    "./Pagination": "./components/pagination/Pagination.tsx",
+    "./MiniPageControl": "./components/pagination/MiniPageControl.tsx"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,7 +17,11 @@
   "license": "ISC",
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
-    "@shoppe_nextjs/utils": "file:../utils",
     "class-variance-authority": "^0.7.0"
+  },
+  "devDependencies": {
+    "@shoppe_nextjs/tailwind-config": "file:../tailwind-config",
+    "@shoppe_nextjs/utils": "file:../utils",
+    "sass": "^1.77.8"
   }
 }
