fix(upload image in account profile): fix logic upload + add node-dev
Refs: #5

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "env-cmd -f .env.dev next dev",
+    "node-dev": "NODE_OPTIONS='--inspect' env-cmd -f .env.dev next dev",
     "build:stg": "env-cmd -f .env.stg next build",
     "build:production": "env-cmd -f .env.production next build",
     "start": "next start",
